force-app/main/default/objects/Int_Facture__c/Int_Facture__c.object-meta.xml
<CustomObject>
    <label>Int_Facture</label>
    <nameField>
        <displayFormat>F{000000000}</displayFormat>
        <label>Nom de Int_Facture</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int_Facture</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>