force-app/main/default/objects/Int_Facture__c/fields/Chapitre__c.field-meta.xml
<CustomField>
    <fullName>Chapitre__c</fullName>
    <label>Chapitre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>