force-app/main/default/objects/Int_Facture__c/fields/Ligne_facture__c.field-meta.xml
<CustomField>
    <fullName>Ligne_facture__c</fullName>
    <label>Ligne facture</label>
    <length>255</length>
    <type>Text</type>
</CustomField>