force-app/main/default/objects/Int_Facture__c/fields/MtHT__c.field-meta.xml
<CustomField>
    <fullName>MtHT__c</fullName>
    <label>MtHT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>