force-app/main/default/objects/Int_Facture__c/fields/MtTTC__c.field-meta.xml
<CustomField>
    <fullName>MtTTC__c</fullName>
    <label>MtTTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>