force-app/main/default/objects/Int_Facture__c/fields/MtTVA__c.field-meta.xml
<CustomField>
    <fullName>MtTVA__c</fullName>
    <label>MtTVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>