force-app/main/default/objects/Int_Facture__c/fields/Num_reglement__c.field-meta.xml
<CustomField>
    <fullName>Num_reglement__c</fullName>
    <label>Num règlement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>