force-app/main/default/objects/Int_Facture__c/fields/Numero_de_facture__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_facture__c</fullName>
    <label>Numéro de facture</label>
    <length>255</length>
    <type>Text</type>
</CustomField>