force-app/main/default/objects/Int_Facture__c/fields/origine__c.field-meta.xml
<CustomField>
    <fullName>origine__c</fullName>
    <label>origine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>