force-app/main/default/objects/Int_Facture__c/fields/Type_enregistrement__c.field-meta.xml
<CustomField>
    <fullName>Type_enregistrement__c</fullName>
    <label>Type enregistrement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>